# librealuvc

./: CMakeLists.txt  build.sh  package.xml  readme.md
CMake/: FindOpenCV.cmake  android_config.cmake  apple_config.cmake  cuda_config.cmake  external_libusb.cmake  global_config.cmake  install_config.cmake  librealuvcConfig.cmake.in  lrs_options.cmake  realuvcConfig.cmake.in  unix_config.cmake  version_config.cmake
config/: librealuvc.pc.in
examples/: README  README.md  cameraControl.bat  cameraControlExample.py  env.bat  go.bat  leapuvc.py  minimum.bat  minimumExample.py  scan.bat  scan.py
include/: CMakeLists.txt
include/librealuvc/: realuvc.h  realuvc_driver.h  rs.h  ru.hpp  ru_common.h  ru_exception.h  ru_hid.h  ru_opencv.h  ru_option.h  ru_usb.h  ru_uvc.h  ru_videocapture.h
include/librealuvc/hpp/: ru_common.hpp  ru_exception.hpp  ru_hid.hpp  ru_option.hpp  ru_usb.hpp  ru_uvc.hpp
src/: CMakeLists.txt  api.h  backend.cpp  backend.h  context.cpp  context.h  device_hub.cpp  driver_peripheral.cpp  driver_rigel.cpp  drivers.h  error-handling.cpp  error-handling.h  go  leap_xu.h  log.cpp  mkviewer  mytest.cpp  option.h  option_parse.cpp  option_parse.h  realuvc.def  realuvc_driver.cpp  rs.cpp  sensor.cpp  sync.cpp  types.cpp  types.h  verify.c  videocapture.cpp  viewer.cpp  viewer_readme.txt
src/core/: CMakeLists.txt  advanced_mode.h  extension.h  options.h
src/leaprealuvc/: leaprealuvc.cpp  leaprealuvc.h
src/libuvc/: device.cpp  diag.cpp  frame.cpp  libuvc.cpp  libuvc.h  libuvc_internal.h  stream.cpp
src/linux/: backend-hid.cpp  backend-hid.h  backend-v4l2.cpp  backend-v4l2.h
src/win/: win-backend.cpp  win-backend.h  win-helpers.cpp  win-helpers.h  win-hid.cpp  win-hid.h  win-usb.cpp  win-usb.h  win-uvc.cpp  win-uvc.h
wrappers/: CMakeLists.txt
wrappers/python/: CMakeLists.txt  pybackend.cpp  pybackend_extras.cpp  pybackend_extras.h  setup.py
wrappers/python/pyrealuvc/: __init__.py
