<?xml version="1.0"?>

<!-- This file is only used to enable the building librealuvc -->
<!-- as a debian package for use with ROS (http://ros.org) -->
<!-- via catkin_make (which invokes cmake) -->

<package format="2">
  <name>librealuvc</name>
  <!-- The version tag needs to be updated with each new release of librealuvc -->
  <version>0.1.1</version>
  <description>
  Portable backend for interfacing to UVC camera devices (adapted from Intel librealsense)
  </description>

  <maintainer email="rcownie@leapmotion.com">Richard Cownie</maintainer>

  <url type="website">https://github.com/IntelRealSense/librealsense/</url>

  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <depend>libusb-1.0-dev</depend>
  <depend>linux-headers-generic</depend>
  <depend>libssl-dev</depend>
  <depend>dkms</depend>
  <depend>udev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
